objects/FSL_Form_Template_Matrix__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Form Template Matrices</relationshipLabel>
        <relationshipName>Form_Template_Matrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Form Template Matrices</relationshipLabel>
        <relationshipName>Form_Template_Matrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Engine_Family_Code__c</fullName>
        <label>Engine Family Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_Form_Template__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Form Template</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select a valid Active and Approved Form Template. If form template is not yet approved, you will not be able to use here.</errorMessage>
            <filterItems>
                <field>disco__Form_Template__c.FSL_Approval_Status__c</field>
                <operation>equals</operation>
                <value>Approved</value>
            </filterItems>
            <filterItems>
                <field>disco__Form_Template__c.disco__Status__c</field>
                <operation>equals</operation>
                <value>In Use</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>disco__Form_Template__c</referenceTo>
        <relationshipLabel>Form Template Matrices</relationshipLabel>
        <relationshipName>Form_Template_Matrices</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL_Query_Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AND</fullName>
                </value>
                <value>
                    <fullName>OR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL_Sub_Type_Branch_Code__c</fullName>
        <formula>FSL_Sub_Type__r.Branch_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Type Branch Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL_Sub_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sub Type</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>FSL_SubType__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>FSL_SubType__c</referenceTo>
        <relationshipLabel>Form Template Matrices</relationshipLabel>
        <relationshipName>Form_Template_Matrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL_Work_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Work Type</label>
        <referenceTo>WorkType</referenceTo>
        <relationshipLabel>Form Template Matrices</relationshipLabel>
        <relationshipName>Form_Template_Matrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Make_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Make Model</label>
        <referenceTo>CSS_Make_Model_Access__c</referenceTo>
        <relationshipLabel>Form Template Matrices</relationshipLabel>
        <relationshipName>Form_Template_Matrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Matrix_Status__c</fullName>
        <label>Matrix Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>One_Form_Dispatched_ServiceAppointment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>One Form / Dispatched ServiceAppointment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>One_Form_Per_Service_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>One Form Per Service Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Repair_Location__c</fullName>
        <label>Repair Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Shop</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Repair_Site_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repair Site Number</label>
        <referenceTo>Address</referenceTo>
        <relationshipLabel>Form Template Matrices</relationshipLabel>
        <relationshipName>Form_Template_Matrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SMN</label>
        <referenceTo>FSL_SMN_DTC__c</referenceTo>
        <relationshipLabel>Form Template Matrices</relationshipLabel>
        <relationshipName>Form_Template_Matrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Territory</label>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipLabel>Form Template Matrices</relationshipLabel>
        <relationshipName>Form_Template_Matrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Type</label>
        <referenceTo>FSL_Service_Type__c</referenceTo>
        <relationshipLabel>Form Template Matrices</relationshipLabel>
        <relationshipName>Form_Template_Matrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Form Template Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FSL_Form_Template__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Account__c</columns>
        <columns>Repair_Site_Number__c</columns>
        <columns>Service_Territory__c</columns>
        <columns>FSL_Sub_Type__c</columns>
        <columns>FSL_Work_Type__c</columns>
        <columns>SMN__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Form Template Matrix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Template Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Any_one_should_be_there</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 ISPICKVAL( Application__c,&quot;&quot;), 
 ISBLANK( Asset__c ), 
 ISBLANK( Engine_Family_Code__c),
 ISBLANK( Repair_Site_Number__c ),
 ISBLANK( Make_Model__c ),
 ISBLANK( Service_Territory__c ),
 ISBLANK( SMN__c ),
 ISBLANK( FSL_Sub_Type__c ),
 ISBLANK( FSL_Work_Type__c ),
 ISBLANK(  Account__c  )
)</errorConditionFormula>
        <errorMessage>Please populate at least one of the Criteria fields</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Choose_One_of_the_Form_Counts</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND( One_Form_Dispatched_ServiceAppointment__c , One_Form_Per_Service_Order__c ),
AND(NOT( One_Form_Dispatched_ServiceAppointment__c ),NOT( One_Form_Per_Service_Order__c ))
)</errorConditionFormula>
        <errorMessage>Please select any one &amp; only one of the checkboxs from &quot;One Form Per Service Order&quot; OR &quot;One Form / Dispatched ServiceAppointment&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Operator_should_not_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( FSL_Query_Operator__c , &quot;&quot;)</errorConditionFormula>
        <errorMessage>Please select the operator</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Matrix_activation_based_on_Form</fullName>
        <active>true</active>
        <description>Prevent Update on Matrix if Form Status is &apos;In Use&apos; and Approval Status is &apos;Approved&apos;</description>
        <errorConditionFormula>AND(ISCHANGED(Active__c),
PRIORVALUE(Active__c)= False,
Active__c= True,
OR(
NOT(ISPICKVAL(FSL_Form_Template__r.FSL_Approval_Status__c,&quot;Approved&quot;)),
NOT(ISPICKVAL(FSL_Form_Template__r.disco__Status__c,&quot;In Use&quot;))
)
)</errorConditionFormula>
        <errorMessage>Form Template is not Active or Approved</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UniqueFormName</fullName>
        <active>false</active>
        <errorConditionFormula>Name == FSL_Form_Template__r.Name</errorConditionFormula>
        <errorMessage>A Form Template Matrix by the same name already exists please update the name in the current Matrix or update the existing one.</errorMessage>
    </validationRules>
</CustomObject>